# Vernify

./: .cursorrules  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  skills-lock.json  sync-mcp-from-env.sh
.claude/: mcp.json  settings.json
.cursor/: MIGRATION.md  README.md  SUMMARY.md  hooks.json  mcp.backup.json  mcp.json.template  tools-strategy.md
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
Web/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
Web/backend/: Dockerfile  Dockerfile.dev  pyproject.toml
Web/backend/app/: __init__.py  main.py
Web/backend/app/api/v1/: __init__.py  ai.py  courses.py  grading.py  latex.py  lessons.py  quiz.py  users.py
Web/backend/app/core/: config.py  deps.py  security.py
Web/backend/app/db/: supabase.py
Web/backend/app/extensions/: __init__.py  base.py
Web/backend/app/extensions/plugins/: __init__.py
Web/backend/app/models/: __init__.py  course.py  submission.py  user.py
Web/backend/app/services/: ai_service.py  grading.py
Web/backend/app/services/latex_parser/: __init__.py  parser.py
Web/backend/app/services/llm/: __init__.py  base.py  factory.py  litellm_adapter.py
Web/backend/app/workers/: __init__.py  tasks.py
docs/: CLAUDE-CURSOR-COLLABORATION.md  DOCUMENT-CONVENTIONS.md  GITHUB-MCP.md  GITHUB-WORKFLOW.md  GRAPHITI-CURSOR-SUBAGENT-TROUBLESHOOTING.md  GRAPHITI-MCP-REFERENCE.md  (+3 more)
(+385 files in other folders)
